--- a/classes/ContactComponentController.cls
+++ b/classes/ContactComponentController.cls
@@ -4,27 +4,21 @@ public with sharing class ContactComponentController {
         if (String.isBlank(param)){
             return '%';
         }
-        
         return '%' + param + '%';
     }
     
     @AuraEnabled
-    public static List<Contact> filteringContacts(String filterValue) {
-        System.debug(filterValue);
+    public static List<Contact> getContacts(String filterValue, Integer maxRecordsLimit) {
         String expression = checkString(filterValue);
-        
+        Integer limitRecords = maxRecordsLimit+1;
+        System.debug(limitRecords);
         List<Contact> contacts = [SELECT Id, Name, Phone, MobilePhone, Email
                                   FROM Contact
                                   WHERE Name LIKE :expression
                                   OR Phone LIKE :expression
                                   OR Email LIKE :expression
-                                  /*ORDER BY CreatedDate DESC*/
                                   ORDER BY LastModifiedDate DESC
-                                  LIMIT 10];
-        
-        //SELECT ID, NAME, Phone, MobilePhone, Email FROM Contact ORDER BY LastModifiedDate DESC LIMIT 10
-        //SELECT ID, NAME, Phone, MobilePhone, Email, LastCUUpdateDate FROM Contact ORDER BY CreatedDate DESC LIMIT 10
-        
+                                  LIMIT :maxRecordsLimit];
         return contacts;
 	}
 }
