--- a/classes/ContactComponentController.cls
+++ b/classes/ContactComponentController.cls
@@ -10,15 +10,25 @@ public with sharing class ContactComponentController {
     @AuraEnabled
     public static List<Contact> getContacts(String filterValue, Integer maxRecordsLimit) {
         String expression = checkString(filterValue);
-        Integer limitRecords = maxRecordsLimit+1;
-        System.debug(limitRecords);
         List<Contact> contacts = [SELECT ID, Name, FirstName, LastName, Phone, MobilePhone, Email, Account.Name
                                   FROM Contact
                                   WHERE Name LIKE :expression
                                   OR Phone LIKE :expression
                                   OR Email LIKE :expression
                                   ORDER BY LastModifiedDate DESC
-                                  LIMIT :maxRecordsLimit];
+                                  LIMIT :Integer.valueof(maxRecordsLimit)];
         return contacts;
+	}
+    
+    @AuraEnabled
+    public static Integer countContacts(String filterValue) {
+        String expression = checkString(filterValue);
+        AggregateResult count = [SELECT Count(ID) CountContacts
+                                 FROM Contact
+                                 WHERE Name LIKE :expression
+                                 OR Phone LIKE :expression
+                                 OR Email LIKE :expression];
+        Integer countContacts = (Integer)count.get('CountContacts');
+        return countContacts;
 	}
 }
